# pdf-extractor

./: .env  README.md  all_invoices.csv  header.csv  main.py  pdf_viz.py  pyproject.toml  teste.csv  transforming.py
configs/rules/: notas.py
configs/tools/: postgres.py
files/csv_invoices/: .~lock.invoice_Alan Shonely_31900.csv#  invoice_Aaron Bergman_36258.csv  invoice_Aaron Bergman_36258_header.csv  invoice_Aaron Bergman_36258_order.csv  invoice_Aaron Bergman_36258_small.csv  invoice_Aaron Bergman_36258_whom.csv  invoice_Aaron Bergman_36259.csv  invoice_Aaron Bergman_36259_header.csv  invoice_Aaron Bergman_36259_order.csv  invoice_Aaron Bergman_36259_small.csv  invoice_Aaron Bergman_36259_whom.csv  invoice_Aaron Bergman_39519.csv  invoice_Aaron Bergman_39519_header.csv  invoice_Aaron Bergman_39519_order.csv  invoice_Aaron Bergman_39519_small.csv  invoice_Aaron Bergman_39519_whom.csv  invoice_Aaron Hawkins_36651.csv  invoice_Aaron Hawkins_36651_header.csv  invoice_Aaron Hawkins_36651_order.csv  invoice_Aaron Hawkins_36651_small.csv  invoice_Aaron Hawkins_36651_whom.csv  invoice_Aaron Hawkins_36652.csv  invoice_Aaron Hawkins_36652_header.csv  invoice_Aaron Hawkins_36652_order.csv  invoice_Aaron Hawkins_36652_small.csv  invoice_Aaron Hawkins_36652_whom.csv  invoice_Aaron Hawkins_37425.csv  invoice_Aaron Hawkins_37425_header.csv  invoice_Aaron Hawkins_37425_order.csv  invoice_Aaron Hawkins_37425_small.csv  invoice_Aaron Hawkins_37425_whom.csv  invoice_Aaron Hawkins_38460.csv  invoice_Aaron Hawkins_38460_header.csv  invoice_Aaron Hawkins_38460_order.csv  (+4928 more)
